feat: improvements error handler

--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "cls-hooked": "^4.2.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.4",
     "eslint-plugin-import": "^2.31.0",
     "form-data": "^4.0.1",
     "helmet": "^8.0.0",
+    "jsdom": "^26.0.0",
     "mo": "^1.7.3",
     "nestjs-cls": "^4.5.0",
     "nestjs-pino": "^4.2.0",
