--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,5 +66,5 @@ jobs:
       - name: Run test
         run: pnpm test
 
-      - name: Run test e2e
-        run: pnpm test:e2e
+      # - name: Run test e2e
+      #   run: pnpm test:e2e
